<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="pref_overlay"
        android:title="@string/pref_overlay"
        android:summary="@string/pref_overlay_desc"
        android:entries="@array/overlay_names"
        android:entryValues="@array/overlay_values"
        android:defaultValue="1"
    />
    <MultiSelectListPreference
        android:key="pref_formats"
        android:title="@string/pref_formats"
        android:summary="@string/pref_formats_desc"
        android:entries="@array/format_type_names"
        android:entryValues="@array/format_type_values"
        android:defaultValue="@array/format_type_default"
    />
    <ListPreference
        android:key="pref_capture"
        android:title="@string/pref_capture"
        android:summary="@string/pref_capture_desc"
        android:defaultValue="@string/capture_default"
        android:entries="@array/capture_type_names"
        android:entryValues="@array/capture_type_values"
    />
</PreferenceScreen>