<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="20dp" android:orientation="vertical">
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
        android:text="@string/insta_title"
        android:layout_marginBottom="6dp"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/selection">
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:text="@string/insta_copy"
            android:id="@+id/radio_copy"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:text="@string/insta_rotate"
            android:id="@+id/radio_rotate"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:text="@string/insta_square"
            android:id="@+id/radio_square"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:text="@string/insta_squarerot"
            android:id="@+id/radio_squarerot"/>
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:orientation="horizontal"
        android:layout_marginTop="6dp">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" android:text="@string/insta_cancel"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:id="@+id/cancel"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/insta_okay"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:id="@+id/okay"/>
    </LinearLayout>

</LinearLayout>