<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root_view"

    tools:context="com.munger.stereocamera.MainActivity">


    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/connectChooser">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect_bluetooth"
            android:id="@+id/connectBluetooth"
            android:checked="true" android:layout_marginEnd="20dp">

        </RadioButton>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect_wifi"
            android:id="@+id/connectWifi">

        </RadioButton>
    </RadioGroup>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:id="@+id/buttons_layout"
    >
        <LinearLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/bluetoothButtons"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restore_buttons_title"
                android:id="@+id/restoreTitle"
                android:textSize="20sp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/connectButton"
                android:text="@string/connect_button"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/listenButton"
                android:text="@string/listen_button"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discover_buttons_title"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:id="@+id/discoverTitle"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/discoverButton"
                android:text="@string/discover_connect_button"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/listenDiscoverButton"
                android:text="@string/discover_listen_button"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/wifiButtons"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:visibility="gone">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/ip_addresses_title"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/ipAddressList">

            </LinearLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ipListenButton"
                android:text="@string/connect_button"
                android:layout_marginBottom="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/ip_address_target_title"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:inputType="number|numberDecimal"
                android:digits="0123456789."
                android:id="@+id/ipAddressTarget"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ipConnectButton"
                android:text="@string/connect_button"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/testButtons"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:visibility="gone">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/testButton"
                android:text="test" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/testPreview" />
        </LinearLayout>

    </RelativeLayout>

    <com.munger.stereocamera.widget.ThumbnailWidget
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp"
        android:id="@+id/thumbnail"/>
</RelativeLayout>
